--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,7 +30,90 @@
                 // "--pred-only",
                 // "--grayscale"
             ]
-        }
+        },
+
+        {
+            "name": "QPDNet evaluation",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "evaluate_quad.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--restore_ckpt",
+                "checkpoints-CLR.pth",
+                "--mixed_precision",
+                "--save_result",
+                "True",
+                "--input_image_num",
+                "2",
+                "--datasets_path",
+                "/mnt/d/Mono+Dual/QP-Data"
+            ]
+        },
+
+        {
+            "name": "Real_QPD_A, test",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "evaluate_quad.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--restore_ckpt",
+                "checkpoints-CLR.pth",
+                "--mixed_precision",
+                "--save_result",
+                "True",
+                "--input_image_num",
+                "2",
+                "--datasets_path",
+                "/mnt/d/dual-pixel-dataset/QP_real_scene_1218/Dataset_A_1218/scale3",
+                "--dataset",
+                "Real_QPD",
+            ]
+        },
+
+        {
+            "name": "Real_QPD_B, test",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "evaluate_quad.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--restore_ckpt",
+                "checkpoints-CLR.pth",
+                "--mixed_precision",
+                "--save_result",
+                "True",
+                "--input_image_num",
+                "2",
+                "--datasets_path",
+                "/mnt/d/dual-pixel-dataset/QP_real_scene_1218/Dataset_B_1218/scale3",
+                "--dataset",
+                "Real_QPD",
+            ]
+        },
+
+        {
+            "name": "MDD, test",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "evaluate_quad.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--restore_ckpt",
+                "checkpoints-CLR.pth",
+                "--mixed_precision",
+                "--save_result",
+                "True",
+                "--input_image_num",
+                "2",
+                "--datasets_path",
+                "/mnt/d/dual-pixel-dataset/MDD_dataset",
+                "--dataset",
+                "MDD",
+            ]
+        },
+
     ]
 }
 
