Organized files, worked on train_mono_qpd

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,6 +43,8 @@
                 // "--restore_ckpt",
                 // "checkpoints-CLR.pth",
                 "--mixed_precision",
+                "--batch_size",
+                "1",
                 // "--save_result",
                 // "True",
                 // "--input_image_num",
