--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,7 +42,6 @@
             "args": [
                 // "--restore_ckpt",
                 // "checkpoints-CLR.pth",
-                "--mixed_precision",
                 "--batch_size",
                 "2",
                 "--restore_ckpt_da_v2",
@@ -59,21 +58,36 @@
 
 
         {
-            "name": "QPDNet evaluation",
+            "name": "Mono-QPD, eval, qpd-test",
             "type": "debugpy",
             "request": "launch",
-            "program": "evaluate_quad.py",
+            "program": "evaluate_mono_qpd.py",
             "console": "integratedTerminal",
             "args": [
                 "--restore_ckpt",
-                "checkpoints-CLR.pth",
-                "--mixed_precision",
-                "--save_result",
-                "True",
-                "--input_image_num",
-                "2",
+                "result/checkpoints/20_epoch_30101_Mono-QPD.pth",
                 "--datasets_path",
-                "/mnt/d/Mono+Dual/QP-Data"
+                "/mnt/d/Mono+Dual/QP-Data",
+                "--freeze_da_v2"
+            ]
+        },
+
+        
+        {
+            "name": "Mono-QPD, 20 epochs, eval, dpdisp",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "evaluate_mono_qpd.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--restore_ckpt",
+                "result/checkpoints/20_epoch_30101_Mono-QPD.pth",
+                "--datasets_path",
+                "/mnt/d/dual-pixel-dataset/MDD_dataset",
+                "--dataset",
+                "MDD",
+                "--save_path",
+                "result/eval/20_epoch_30101_Mono-QPD"
             ]
         },
 
