--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,24 +34,20 @@
 
 
         {
-            "name": "MonoQPD, train, qpd-train",
+            "name": "MonoQPD, train, qpd-train, conv",
             "type": "debugpy",
             "request": "launch",
             "program": "train_mono_qpd.py",
             "console": "integratedTerminal",
             "args": [
-                // "--restore_ckpt",
-                // "checkpoints-CLR.pth",
                 "--batch_size",
-                "2",
+                "1",
                 "--restore_ckpt_da_v2",
                 "mono_qpd/Depth_Anything_V2/checkpoints/depth_anything_v2_vitl.pth",
-                // "--save_result",
-                // "True",
-                // "--input_image_num",
-                // "2",
+                "--image_size",
+                "224", "224",
                 "--datasets_path",
-                "/mnt/d/Mono+Dual/QP-Data",
+                "datasets/QP-Data",
                 "--freeze_da_v2",
                 "--save_path",
                 "result/train/",
@@ -59,6 +55,55 @@
                 "conv",
             ]
         },
+
+        {
+            "name": "MonoQPD, train, qpd-train, conv, tsubame",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "train_mono_qpd.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--batch_size",
+                "2",
+                "--restore_ckpt_da_v2",
+                "mono_qpd/Depth_Anything_V2/checkpoints/depth_anything_v2_vitl.pth",
+                "--image_size",
+                "448", "448",
+                "--datasets_path",
+                "datasets/QP-Data",
+                "--freeze_da_v2",
+                "--save_path",
+                "result/train/",
+                "--feature_converter",
+                "conv",
+            ]
+        },
+
+        {
+            "name": "MonoQPD, train, qpd-train, pixelshuffle, tsubame",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "train_mono_qpd.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--batch_size",
+                "2",
+                "--restore_ckpt_da_v2",
+                "mono_qpd/Depth_Anything_V2/checkpoints/depth_anything_v2_vitl.pth",
+                "--image_size",
+                "448", "448",
+                "--datasets_path",
+                "datasets/QP-Data",
+                "--freeze_da_v2",
+                "--save_path",
+                "result/train/",
+                "--feature_converter",
+                "pixelshuffle",
+            ]
+        },
+
+
+
 
 
         {
@@ -71,7 +116,7 @@
                 "--restore_ckpt",
                 "result/checkpoints/20_epoch_30101_Mono-QPD.pth",
                 "--datasets_path",
-                "/mnt/d/Mono+Dual/QP-Data",
+                "datasets/QP-Data",
                 "--freeze_da_v2"
             ]
         },
@@ -86,7 +131,7 @@
                 "--restore_ckpt",
                 "result/checkpoints/10_epoch_15051_Mono-QPD.pth",
                 "--datasets_path",
-                "/mnt/d/dual-pixel-dataset/MDD_dataset",
+                "datasets/MDD_dataset",
                 "--dataset",
                 "MDD",
                 "--save_path",
@@ -107,7 +152,7 @@
                 "--restore_ckpt",
                 "result/checkpoints/20_epoch_30101_Mono-QPD.pth",
                 "--datasets_path",
-                "/mnt/d/dual-pixel-dataset/MDD_dataset",
+                "datasets/MDD_dataset",
                 "--dataset",
                 "MDD",
                 "--save_path",
@@ -127,7 +172,7 @@
                 "--restore_ckpt",
                 "result/checkpoints/20_epoch_30101_Mono-QPD.pth",
                 "--datasets_path",
-                "/mnt/d/Mono+Dual/QP-Data",
+                "datasets/QP-Data",
                 "--dataset",
                 "QPD",
                 "--save_path",
@@ -194,7 +239,7 @@
                 "--input_image_num",
                 "2",
                 "--datasets_path",
-                "/mnt/d/dual-pixel-dataset/MDD_dataset",
+                "datasets/MDD_dataset",
                 "--dataset",
                 "MDD",
             ]
