save_result=False making qualitative evaluation not saved bug fixed. Initializing scheduler when resuming training function added.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -82,7 +82,10 @@
                 "--feature_converter",
                 "conv",
                 "--stop_step",
-                "200"
+                "120",
+                "--initialize_scheduler",
+                // "--lr",
+
             ]
         },
 
