--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,6 +33,34 @@
         },
 
         {
+            "name": "MonoQPD, train, qpd-AiF-train, conv",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "train_mono_qpd.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--batch_size",
+                "1",
+                "--restore_ckpt_da_v2",
+                "mono_qpd/Depth_Anything_V2/checkpoints/depth_anything_v2_vitl.pth",
+                "--image_size",
+                "224", "224",
+                "--train_datasets", 
+                "QPD-AiF",
+                "--datasets_path",
+                "datasets/QP-Data",
+                "--freeze_da_v2",
+                "--save_path",
+                "result/train/",
+                "--feature_converter",
+                "conv",
+                // "--stop_step",
+                // "100"
+            ]
+        },
+
+
+        {
             "name": "MonoQPD, train, qpd-train, conv",
             "type": "debugpy",
             "request": "launch",
